<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginBottom="50dp">
    <LinearLayout
        android:id="@+id/signup_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/black_instagram_text_logo1"/>
        </FrameLayout>
        <EditText
            android:id="@+id/signup_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:inputType="textEmailAddress"
            android:hint="@string/email"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            />
        <EditText
            android:id="@+id/signup_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:inputType="textEmailAddress"
            android:hint="@string/full_name"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            />
        <EditText
            android:id="@+id/signup_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            />
        <EditText
            android:id="@+id/signnup_password_repeat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:hint="@string/password_repeat"
            android:inputType="textPassword"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            />
        <Button
            android:id="@+id/signup_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signup"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            />
    </LinearLayout>
    </ScrollView>
    <Button
        android:id="@+id/signup_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/already_a_member"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        style="@style/Base.Widget.AppCompat.Button.Borderless"
        />
</RelativeLayout>
