<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <ImageView
        android:id="@+id/login_constraint_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintBottom_toTopOf="@+id/login_constraint_email"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:src="@drawable/black_instagram_text_logo1" />

    <EditText
        android:id="@+id/login_constraint_email"
        app:layout_constraintBottom_toTopOf="@+id/login_constraint_password"
        app:layout_constraintTop_toBottomOf="@id/login_constraint_logo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:maxLines="1"
        android:inputType="textEmailAddress"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        />

    <EditText
        android:id="@+id/login_constraint_password"
        app:layout_constraintTop_toBottomOf="@id/login_constraint_email"
        app:layout_constraintBottom_toTopOf="@+id/login_constraint_login"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:maxLines="1"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        />

    <Button
        android:id="@+id/login_constraint_login"
        app:layout_constraintTop_toBottomOf="@id/login_constraint_password"
        app:layout_constraintBottom_toTopOf="@+id/login_constraint_forgot_pasword"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        />
    <Button
        android:id="@+id/login_constraint_forgot_pasword"
        app:layout_constraintTop_toBottomOf="@id/login_constraint_login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        style="@style/Base.Widget.AppCompat.Button.Borderless"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        />

    <Button
        android:id="@+id/login_constraint_register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        style="@style/Base.Widget.AppCompat.Button.Borderless"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/signup"
        />

</android.support.constraint.ConstraintLayout>